--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,7 +19,7 @@
 
 @font-face {
   font-family: 'ThunderInferno';
-  src: url('/fonts/ThunderInferno.ttf') format('truetype');
+  src: url('/fonts/ThunderInferno.otf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
